[package]
name = "huntfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
walkdir = "2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tiberius = { version="0.12.2",features=["chrono","sql-browser-tokio","bigdecimal"]}
tokio = { version = "1.20.0", features = ["macros"]}
tokio-util = { version = "0.7", features = ["compat"]}
anyhow = "1"
filesize = "0.2.0"
